v3.10.7 (XXXX-XX-XX)
--------------------

* BTS-1315: Fixed spurious occurring failures during Foxx Application
  installation in case a Load Balancer is being used in front of the
  coordinators.

* Added startup option `--query.max-collections-per-query` to adjust the limit
  for the maximum number of collections/shards per query. The option defaults to
  `2048`, which is equivalent to the previous hardcoded value.

* Added metric "rocksdb_total_sst_files" to count the number of sst files,
  aggregated over all levels of the LSM tree.

* Add metric `arangodb_file_descriptors_current` to expose the number of file
  descriptors currently opened by the arangod process. This metric is available
  on Linux only.
  As counting the number of open file descriptors can be expensive, this metric
  is only updated in a configurable interval. The new startup option
  `--server.descriptors-count-interval` can be used to specify the update
  interval (in milliseconds). It defaults to 60,000 (i.e. once per minute).
  The startup option can be set to a value of `0` to disable the counting of
  open file descriptors for performance reasons.
  If counting is turned off, the metric will report a value of `0`.

* Add metric `arangodb_file_descriptors_limit` to expose the system limit for
  the number of open files for the arangod process.

* Added metric `rocksdb_cache_peak_allocated` to store the peak memory
  allocation value for in-memory caches.

* Remove leftover in-memory cache tables after dropping collections that had
  their `cacheEnabled` flag set to `true`. Previously some memory could remain
  allocated in the in-memory cache even after such collections were dropped.

* Reduce memory usage for incremental sync replication.

  The incremental sync protocol that was used for collections created with 3.8
  or higher had memory usage issues in case the follower already had some local
  data and its dataset was much larger than the leader's. For example, this can