@@ -1,6 +1,12 @@
 v3.10.7 (XXXX-XX-XX)
 --------------------
 
+* Increase too short timeouts for requests made from coordinators to DB-servers
+  when retrieving the number of documents or the index selectivity estimates for
+  SmartGraph edge collection parts. These parts were treated like system
+  collections because of their naming convention, and the requests were run with
+  a timeout of only 5s.
+
 * BTS-1315: Fixed spurious occurring failures during Foxx Application
   installation in case a Load Balancer is being used in front of the
   coordinators.
